codepkg/objects/Audit_Log__c.object
<CustomObject>
    <description>For logging record changes</description>
    <fields>
        <fullName>ICS_Retrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Informatica to update that tells us whether Informatica picked up or not.</description>
        <label>ICS Retrieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Data_Format__c</fullName>
        <description>Format of Object Data</description>
        <label>Object Data Format</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Data_Key_Field_Value__c</fullName>
        <description>The value for the Object Data Key Field.</description>
        <label>Object Data Key Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Data_Key_Field__c</fullName>
        <description>Field that acts as an Identifier on the object.</description>
        <label>Object Data Key Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Data_Operation_Mode__c</fullName>
        <label>Object Data Operation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>INSERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOFT-DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNDELETE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_Data__c</fullName>
        <description>JSON string of record</description>
        <label>Object Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>sObject API Name</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <description>Name of Datasync System.</description>
        <label>System Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Audit Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ICS_Retrieved__c</columns>
        <columns>Object_Data__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>